--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -4,6 +4,15 @@
 		<meta charset="utf-8"/>
 	</head>
 	<body>
+		<!--Версия без Query
+		<div id="msg"> </div>
+		<input type="submit" id="submit1"> Submit 1</input> <br>
+		<input type="submit" id="submit2"> Submit 2</input> <br>
+		<input type="submit" id="submit3"> Submit 3	</input> <br>
+		<input type="submit" id="data1"> Data 1	</input> <br>
+		<input type="submit" id="data2"> Data 2	</input> <br>
+		<input type="submit" id="data3"> Data 3	</input> <br>-->
+		
 		<div id="msg"> </div>
 		<input type="submit" id="submit1"> Submit 1</input> <br>
 		<input type="submit" id="submit2"> Submit 2</input> <br>
@@ -12,8 +21,8 @@
 		<input type="submit" id="data2"> Data 2	</input> <br>
 		<input type="submit" id="data3"> Data 3	</input> <br>
 		
+		<script src="jquery-3.3.1.js"> </script>
 		<script src="ajax.js"> </script>
-	
 			
 	</body>
 </html>
